--- a/static/usp570/pm_usp570_bak.Rmd
+++ b/static/usp570/pm_usp570_bak.Rmd
@@ -23,60 +23,90 @@ RE: Define and measure accessibility in Plan Bay are 2050
 
 # Summary
 
-Accessibility, the ease of reaching destinations, is a key land use and transportation performance measure[@boisjoly2017insider].
-Including clear accessibility objectives, definitions, and indicators in Plan Bay Area 2050 is key to promoting the use of metrics in policy and practice.
-Furthermore, multi-criteria analysis approaches including accessibility indicators need to guide the decision-making process and influence land use and transportation planning ultimately. [@boisjoly2017get]
+Clarifying accessibility definition and measures is necessary in Plan Bay Area 2050. Accessibility, the ease of reaching destinations, is a key land use and transportation performance measure[@boisjoly2017insider]
 
+accessibility need to be have clearly defined in plans
+
+including clear accessibility indicators in planning documents is key to promoting the use of metrics in policy and practice, as it was stated as a main reason motivating the generation of accessibility metrics. 
+
+Furthermore, multi-criteria analysis approaches including accessibility indicators need to guide the decision-making process. [@boisjoly2017get]
+
+ultimatey, informing decision-making and influencing land use and transportation planning
+
+Accessibility-oriented RTPs:
+
+- explicitly define accessibility,
+
+- set goals and objectives in terms of accessibility (not just congestion reduction), and
+
+- use accessibility measures to define regional transportation priorities, including the evaluation of individual projects in the MPO service area.
 
 # Background
 
 - Plan Bay Area 2050: they are going to update their regional transportation plan, along with their processes for selecting projects for funding, at all scales.
 
-Plan Bay Area 2050 is an integrated long-range transportation and land use plan developed and adopt by MTC and ABAG. Work on Plan Bay Area 2050 is expected to begin in August 2019 and focused update that builds upon the growth pattern and strategies developed in the original Plan Bay Area 2040 (adopted in July 2017) but with updated planning assumptions that incorporate key economic, demographic and financial trends from the last four years.
-Plan Bay Area 2050 sets a roadmap for future transportation investments and will identify what it would take to accommodate expected growth.
-To meet The Bay Area's transportation needs through 2050 while preserving the character of its diverse communities and adapting to future population growth.
-To make progress toward the Bay Area long-range transportation and land use goals.
+Plan Bay Area 2050 is a state-mandated, integrated long-range transportation and land use plan developed and adopt by MTC and ABAG. Work on Plan Bay Area 2050 is expected to begin in August 2019 and focused update that builds upon the growth pattern and strategies developed in the original Plan Bay Area 2040 (adopted in July 2017) but with updated planning assumptions that incorporate key economic, demographic and financial trends from the last four years.
 
+The Bay Area can meet its transportation needs through 2050 while preserving the character of its diverse communities and adapting to future population growth.
+The Bay Area can make progress toward the region’s long-range transportation and land use goals.
+Plan Bay Area 2050 does set a roadmap for future transportation investments and will identify what it would take to accommodate expected growth.
 
+The most common accessibility-based objective is to increase access to jobs, both as a way to foster economic development and to reduce social inequities. For example, Transport for London identified two access to jobs indicators, one to support economic development (through improved employment accessibility) and one to improve social inclusion (through increased access to employment for deprived areas). With respect to social inclusion or social equity, a broader range of destinations is generally included (libraries, health care facilities, greeneries, supermarkets, etc.)
 
-The accessibility-based objective is to increase access to jobs, both as a way to foster economic development and to reduce social inequities. 
-through improved employment accessibility to support economic development
-through increased access to employment for deprived areas to improve social inclusion. a broader range of destinations is generally included (libraries, health care facilities, greeneries, supermarkets, etc.)
+Overall most plans including accessibility objectives focus on economic development and social inclusion, mostly through access to jobs. Access to the transportation system (see Houston-Galveston Area Table 1) or to mobility (see Ile-de-France Table 1) are also often stated as goals or objectives. However, these goals do not directly address access to destinations.
 
-While the concept of accessibility in formal measurement has been around for more than fifty years, and has been a common element in the goals and objectives of transport plans @hansen1959accessibility. The most recent federal transportation bills – the Fixing America’s Surface Transportation Act (FAST Act) require Plan Bay Area 2050 to address ‘accessibility and mobility of people and freight’ (U.S. Department of Transportation, 2014). However, the guidelines doesn't define accessibility explicitly. Access to destinations does not translate into clear accessibility objectives in previous plans.The terms accessibility and mobility are used as a vague term that does not reflect the ease of reaching various destinations and often are conflated, “misused”, and “abused” in practice (Halden, 2011). 
+In many plans, however, accessibility or access is used in a way that does not reflect the ease of reaching various destinations and does not translate into accessibility indicators.
 
-There are two accessibility-based objectives in current Plan Bay Area 2040. they are translated into indicators that do not reflect accessibility. Equitable access: Decrease by 10 percentage points (to 56 percent from 66 percent) the share of low-income and lower-middle income residents’ household income consumed by transportation and housing; Access to Jobs: Average travel time in minutes for commute trips.
+the term accessibility (or access) is often not defined, and is used as a vague term that does not translate into clear accessibility objectives. 
+
+Accessibility is rather used as a buzzword, together with mobility, and does not refer to a distinct concept.
+
+Even when specific accessibility objectives are stated in the plans, they are often translated into indicators that do not reflect accessibility. 
+
+Bay Area (San Francisco)	
+
+Objective of Equitable access: Decrease by 10 percentage points (to 56 percent from 66 percent) the share of low-income and lower-middle income residents’ household income consumed by transportation and housing
+
+Objective of Access to Jobs: Average travel time in minutes for commute trips.
 
 Although travel time is a component of accessibility, it does not fully reflect access to destinations. It is an indicator of mobility and does not capture the potential of interaction for opportunities, as defined by Hansen (1959). Having shorter travel times does not necessarily equate to having access to a larger number of destinations. Furthermore, as discussed by Litman (2013), strategies aiming at increasing traffic speed may in some cases lead to an overall reduction in accessibility. In sum, increased mobility does not always result in increased accessibility (Halden, 2011, Levine et al., 2012). 
 
-The lack of clarity on accessibility leaves vehicle speed as the fundamental criterion for success in previous plans. [@proffitt2019accessibility]
+
+While the concept of accessibility in formal measurement has been around for more than fifty years, and has been a common element in the goals and objectives of transport plans, its actual adoption in transport planning has been limited until recently. @hansen1959accessibility
+
+The lack of clarity on accessibility leaves vehicle speed as the fundamental criterion for success in previous plans. [@article{proffitt2019accessibility]
 
 ‘traditional transport planning, which tends to focus on improvements to the transport system that facilitate mobility, without considering the access needs that drive travel behaviour’ (Chapman and Weir, 2008: 7).
 
-Explicitly defining accessibility as the end goal of the transportation network would encourage the establishment of accessibility-based performance indicators and help policy-making for MTC, ABAG, and local governments.
+travel is a derived demand *(Goldman and Gorham, 2006; Grengs et al., 2010; Halden, 2002; Handy and Niemeier, 1997; Levine et al., 2012)*.
+people travel to places where they can meet their daily needs, not simply to move about. 
+the purpose of most travel is about the destination, not the journey.
 
+in those plans accessibility is often not clearly defined and thus often used as a buzzword. 
 
-# Definition: why it should be used in transportation decision making
+given the broad and flexible guidelines, accessibility is often “misused” and “abused in practice” (Halden, 2011)
+
+# Definition: 
+
+- Explains and defines accessibility, including why it should be used in transportation decision making
 
  accessibility can be understood as the ease of reaching services and activities (Litman, 2013).
+
+The most recent federal transportation bills – the Fixing America’s Surface Transportation Act (FAST Act) lay out guidelines for how MPOs must develop regional transportation plans. The guidelines require every plan to address eight planning factors, including ‘accessibility and mobility of people and freight’. None of the guidelines define accessibility explicitly, and all use it exclusively in the phrase ‘accessibility and mobility’. The result is that the terms accessibility and mobility often are conflated in practice, with both terms describing attributes of mobility. Explicitly defining accessibility as the end goal of the transportation network would clarify the concept for all MPOs and local governments.
+
+the US federal government defines eight planning factors that guide the development of the Transportation Plans by the MPOs, one of which is to “increase the accessibility and mobility of people and for freight” (U.S. Department of Transportation, 2014). As accessibility is not clearly defined, access to destinations is often not reflected in the plans. Accessibility goals should hence be clearly defined to encourage the establishment of accessibility-based performance indicators.
 
 Accessibility, defined as the ease of reaching destinations *(Preston and Rajé, 2007)*, is one of the most comprehensive performance measures of land use and transportation systems *(El-Geneidy and Levinson, 2006)*. As such, accessibility reflects the multiple benefits provided by land use and transportation systems *(Ben-Akiva and Lerman, 1979)*. For example, greater accessibility is associated with higher land values *(Koenig, 1980, El-Geneidy and Levinson, 2006, Du and Mulley, 2012)* and employment rates *(Ornati et al., 1969, Pignatar and Falcocch, 1969, Sanchez, 1999, Blumenberg and Ong, 2001, Sari, 2015, Tyndall, 2015)*, as it provides residents with greater access to a variety of opportunities. In the same way, increased accessibility contributes to reducing the risks of social exclusion for vulnerable individuals *(Preston and Rajé, 2007, Lucas, 2012)*. Furthermore, accessibility by transit is associated with greater transit use *(Chen et al., 2008, Owen and Levinson, 2015b)*, and can thus help in reducing car use and the resulting greenhouse gas emissions *(Levinson, 1998, Handy, 2002)*. 
 
 "Access is the fundamental force for understanding cities,"..." is a concept that helps understand and conceptualize the complex relationship between transport and land use in a city and their impacts on city organization, development, and planning to achieve more sustainable outcomes."[@levinson2018metropolitan, p. 22] 
 
-Accessibility is increasingly seen as an alternative to mobility oriented planning paradigm (Geurs et al., 2012), as it allows capturing the complex interactions between land use and transportation systems (Hansen, 1959) and provides a social perspective on transportation planning (Banister, 2008, Lucas, 2012). 
-While mobility merely reflects the ease of moving, accessibility addresses the ease of reaching desired destinations, which is in fact the reason why people undertake trips (Preston and Rajé, 2007). 
-Accessibility is one of the most comprehensive measures to assess the complex performance of land use and transportation systems in a region.[@boisjoly2017get]
+Accessibility is increasingly seen as an alternative to mobility oriented planning paradigm (Geurs et al., 2012), as it allows capturing the complex interactions between land use and transportation systems (Hansen, 1959) and provides a social perspective on transportation planning (Banister, 2008, Lucas, 2012). While mobility merely reflects the ease of moving, accessibility addresses the ease of reaching desired destinations, which is in fact the reason why people undertake trips (Preston and Rajé, 2007). Accessibility is one of the most comprehensive measures to assess the complex performance of land use and transportation systems in a region.[@boisjoly2017get]
 
 - Importance
 
-set goals and objectives in terms of accessibility (not just congestion reduction), and
-
 The accessibility paradigm frames accessibility as the end goal of a transportation system.
 
-Accessibility is instrumental in explaining the spatial form of metropolitan areas. 
-
-accessibility is “perhaps the most important concept in defining and explaining regional form and function.”8 Consistent with the standard model of urban economics, it has been observed that living in an area with relatively high accessibility to jobs is associated with shorter trips, as is working in an area of relatively high housing accessibility.9 
+Accessibility is instrumental in explaining the spatial form of metropolitan areas. Past writings have claimed accessibility is “perhaps the most important concept in defining and explaining regional form and function.”8 Consistent with the standard model of urban economics, it has been observed that living in an area with relatively high accessibility to jobs is associated with shorter trips, as is working in an area of relatively high housing accessibility.9 
 
 [@levinson2018metropolitan, p. 111] factors that affect land use and rate of development associated with different types of accessibility: e.g. access to suppliers, workforce, customers, desirable environment (aesthetically pleasing surroundings, clean air and water),amenities (access to recreational and other non-work destinations), friendly government, etc. 
 
@@ -87,61 +117,85 @@ Using accessibility as the performance measure by which we assess current condit
 
 - Accessibility versus Mobility
 
-travel is a derived demand *(Goldman and Gorham, 2006; Grengs et al., 2010; Halden, 2002; Handy and Niemeier, 1997; Levine et al., 2012)*.
-people travel to places where they can meet their daily needs, not simply to move about. 
-the purpose of most travel is about the destination, not the journey.
+a clear distinction should be made between access to mobility, access to destinations (Levine et al., 2012) and universal accessibility. 
 
-accessibility how easier it is to reach destinations. focuses on reaching destinations, the end goal of a transportation network
+Mobility is concerned with how difficult it is to travel. accessibility how easier it is to reach destinations. 
 
-Mobility is concerned with how easy it is to travel. focuses on travel speeds. Improvements in mobility alone are not sufficient to ensure improvements in accessibility. [@proffitt2019accessibility]
 
-Planning for mobility has taken on the meaning of making it easier to get around. 
-This focus on the ease of traveling along the transport network itself (rather than focusing on the ease of reaching destinations) has aligned well with modern planning paradigms; 
-road building has been the most popular solution to congestion. These paradigms prize the planning-for-mobility perspective because it accommodates growing levels of travel and increases the potential for movement.
 
- conventional practice in transportation planning has employed a ‘predict and provide’ model that focuses the majority of funding and planning attention on expanding roadway capacity. [@levinson2018metropolitan, p. 22] 
- 
-performance metrics that focus on roadway congestion as experienced by automobile drivers *(Ewing, 1993; Handy, 2005; Krizek and Levinson, 2010)*, with higher vehicle speeds the ‘fundamental criterion for success’ *(Levine et al., 2012: 158)*. Speed-based metrics include roadway level of service (LOS), peak-period delay, traffic volume/road capacity, travel time/speed, vehicle hours of travel, the duration of peak-period congestion, and others *(Ewing, 1996; Transportation Research Board, 2010)*. Even high-occupancy toll lanes, the most common demand-management strategy used in the USA, are typically added as new capacity, only rarely replacing existing highway travel lanes *(Ewing and Proffitt, 2016)*. Planning for higher travel speeds that facilitate longer and often more frequent trips is the mobility paradigm.
+In contrast, the concept of mobility is concerned only with how easy it is to get from one place to another. Mobility is only part of the picture.
 
-improving mobility – via automobile, transit, or any other travel mode – means facilitating faster travel speeds so individuals can reach more destinations in a given travel time, improving proximity means shortening distances between trip origins and destinations so individuals can reach a satisfactory number of exchange opportunities even if they travel more slowly. In other words, neighbourhoods, cities, and metro areas can be made more accessible by reducing travel distances as well as by facilitating faster travel. The advantage of planning for accessibility versus planning solely for (auto)mobility is that the former allows for a comparison of the tradeoffs among financial, environmental and human health and wellbeing concerns when making decisions about land use and transportation.
+accessibility focuses on reaching destinations, the end goal of a transportation network, while mobility focuses on a single means of achieving this goal, travel speeds. Improvements in mobility alone are not sufficient to ensure improvements in accessibility. [@article{proffitt2019accessibility]
 
 
 Accessibility does not depend on good mobility.Some places such as San Francisco downtown have good accessibility despite having poor mobility (severe traffic congestion). The Residents live within a short distance of all needed and desired destinations. the travel times between destinations are relatively short, even if travel speeds are low.
+
+A place can also have good mobility but poor accessibility. Think of  Manitoba in Canada. Some rural area has ample roads, low levels of congestion, and high speeds of travel, but relatively few destinations for shopping. Thus, good mobility is neither a sufficient nor a necessary condition for good accessibility.
+
+Planning for mobility has taken on the meaning of making it easier to get around. 
+This focus on the ease of traveling along the transport network itself (rather than focusing on the ease of reaching destinations) has aligned well with modern planning paradigms; 
+
+road building has been the most popular solution to congestion. These paradigms prize the planning-for-mobility perspective because it accommodates growing levels of travel and increases the potential for movement.
 
 In the suburban areas of Bay Area, transit service is relatively sparse and destinations are generally beyond walking distance, leaving residents with no option but to drive. the practice of planning is largely mobility-dependent, and car-dependent and has deteriorated levels of accessibility. As traffic levels invariably increase in these areas, accessibility ultimately declines for all modes.
 
 Planning for accessibility, in contrast, means making it easier for people to get where they want to go. Land use policies designed to bring destinations within walking distance of residential areas are one example of this paradigm. But planning for access may not even require retrofitting neighborhoods. For example, transit services that link specific groups of users to their desired destinations, such as reverse commute programs and other client-based transport services, are examples of planning for accessibility. Efforts like these reduce the need to drive, although they don’t necessarily reduce actual driving.25
 
+
+[@article{proffitt2019accessibility]
+
+ conventional practice in transportation planning has employed a ‘predict and provide’ model that focuses the majority of funding and planning attention on expanding roadway capacity. [@levinson2018metropolitan, p. 22] 
+
+performance metrics that focus on roadway congestion as experienced by automobile drivers *(Ewing, 1993; Handy, 2005; Krizek and Levinson, 2010)*, with higher vehicle speeds the ‘fundamental criterion for success’ *(Levine et al., 2012: 158)*. Speed-based metrics include roadway level of service (LOS), peak-period delay, traffic volume/road capacity, travel time/speed, vehicle hours of travel, the duration of peak-period congestion, and others *(Ewing, 1996; Transportation Research Board, 2010)*. Even high-occupancy toll lanes, the most common demand-management strategy used in the USA, are typically added as new capacity, only rarely replacing existing highway travel lanes *(Ewing and Proffitt, 2016)*. Planning for higher travel speeds that facilitate longer and often more frequent trips is the mobility paradigm.
+
 Accessibility is focused on making it easier for individuals to reach destinations where they can meet daily needs such as work, recreation, socialising, shopping, and other forms of social exchange *(Martens, 2015; Miller, 2005)*. 
+
+improving mobility – via automobile, transit, or any other travel mode – means facilitating faster travel speeds so individuals can reach more destinations in a given travel time, improving proximity means shortening distances between trip origins and destinations so individuals can reach a satisfactory number of exchange opportunities even if they travel more slowly. In other words, neighbourhoods, cities, and metro areas can be made more accessible by reducing travel distances as well as by facilitating faster travel. The advantage of planning for accessibility versus planning solely for (auto)mobility is that the former allows for a comparison of the tradeoffs among financial, environmental and human health and wellbeing concerns when making decisions about land use and transportation.
 
 it facilitates the evaluation of tradeoffs between land use, transportation and social needs. By combining aspects of land use and transportation into a single measure, accessibility focuses attention on the performance of the system as a whole rather than on just segments of the transportation network.
 
 the clear distinction between mobility and accessibility indicators. In the Baltimore plan, the multi-criteria analysis includes the following goals: safety, accessibility, mobility, environmental conservation, security and economic prosperity. Interestingly, accessibility and mobility are included as two distinct goals with different criteria and methodologies, 
-
-a clear distinction should be made between access to mobility, access to destinations (Levine et al., 2012) and universal accessibility. 
-
 
 
 # Evaluates the accessibility measures
 
 - You evaluation should use clear criteria and draw on existing sources.
 
-use accessibility measures to define regional transportation priorities, including the evaluation of individual projects in the MPO service area.
 
 
- - the activity/land use component  
- 
-The land use component is related to the spatial distribution of opportunities. Urban opportunities can include, but are not limited to, jobs, health services and retail stores.  
-access to destinations is largely contingent on the spatial distribution of destinations, influenced by the distribution of residential, economic, cultural and social activities. the land use system, goes by the presence of destinations, such as jobs, restaurants, daycares, health care facilities, and households.
+
+@lyons2016guidance argue for a focus upon the *Triple Access System* of spatial proximity in land use system, physical mobility in the transport system and digital connectivity in the telecommunications system as a framework for policy and investment decisions that can harness flexibility and resilience. 
+
+@levinson2018metropolitan introduce four measure methods for accessibility to employment[^9], overall accessibility[^10], and gravity model[^11]. Network size indicates an attribute of the built environment. cumulative opportunities measures
+Accessibility can describe the "interaction by a function of the travel cost, such that distant interactions have less weight than nearby interactions." gravity models also consider distance or travel time and disclose that the interaction between places is inversely proportional to travel cost.
+
+
+
+
+
+ - activity component, the land use system, goes by the presence of destinations, such as jobs, restaurants, daycares, health care facilities, and households.
+
+Firstly, access to destinations is largely influenced by the distribution of residential, economic, cultural and social activities (the land use component).
 
 location-based metrics are most commonly used in planning as they provide a comprehensive measure of regional accessibility (Boisjoly and El-Geneidy, 2017). These metrics indicate the ease of accessing destinations from a specific location and accounts for the spatial distribution of opportunities (for example, jobs or healthcare services) and the ability to move from one place to another (Geurs and van Wee, 2004). 
 
+accessibility is largely contingent on the spatial distribution of destinations, the land use component,
 
- - the transport component. 
+The land use component is related to the spatial distribution of opportunities. Urban opportunities can include, but are not limited to, jobs, health services and retail stores. 
 
-The transport component refers to the transport infrastructure specific to each mode.  
 
-This is some measure of the ability to move along the network.which determines the travel time, costs and convenience from a place to another (Geurs and van Wee, 2004)., is generally mode specific and based on travel time or distance (Hansen, 1959, Vickerman, 1974, Handy, 1994, Geurs and van Wee, 2004, Owen and Levinson, 2015a). 
+
+
+ - the transport component. This is some measure of how easy or difficult it is to move along the network.
+ 
+Accessibility further depends on the transportation network which determines the travel time, costs and convenience from a place (for example, home) to another (for example, work) (the transport component).
+
+The transport component, the ability to move from one place to the other, is generally mode specific and based on travel time or distance (Hansen, 1959, Vickerman, 1974, Handy, 1994, Geurs and van Wee, 2004, Owen and Levinson, 2015a). 
+
+ and the ability to move from one place to another, the transport component (Geurs and van Wee, 2004). 
+ 
+The transport component refers to the transport infrastructure specific to each mode. 
+
 
 
 - utility measures (which quantify the benefit individuals get from destinations), 
@@ -155,7 +209,7 @@ Travel costs are generally measured based on travel time or distance
 
 Two location-based measures are commonly used in accessibility research. 
 
-   * cumulative opportunity indices (counting exchange opportunities within a defined geographic parameter), 
+    * cumulative opportunity indices (counting exchange opportunities within a defined geographic parameter), 
 
 A common location-based metric is a measure of cumulative-opportunities, which counts all opportunities that can be reached within a travel costs threshold. For example, the number of jobs that are within 45 min of travel times by transit from a specific place is used to assess the access to jobs by public transit. 
 
@@ -176,7 +230,7 @@ In terms of modes and thresholds (Fig. 1), accessibility to jobs is generally ge
 ## Access measures:  the ease and worth of travel to destinations far away
 
 
-   * gravity-type models (pitting the importance of given exchange opportunities against travel time impedances), 
+    * gravity-type models (pitting the importance of given exchange opportunities against travel time impedances), 
 
 Another common metric is the gravity-based measure, which discounts opportunities based on a distance-decay function. Accordingly, opportunities that are located farther (by distance or time) receive less weight than closer opportunities. While this measure is more reflective of travel behavior, cumulative-opportunities are simpler to generate, interpret and communicate.
 
@@ -289,12 +343,7 @@ including accessibility indicators in multi-criteria analysis provides a systema
 
 Accessibility maps and metrics are useful tools to provide an overview of the land use and transportation network and they illustrate an underlying accessibility analysis.
 
-
-@lyons2016guidance argue for a focus upon the *Triple Access System* of spatial proximity in land use system, physical mobility in the transport system and digital connectivity in the telecommunications system as a framework for policy and investment decisions that can harness flexibility and resilience. 
-
 other dimensions of accessibility might currently be neglected in metropolitan transportation plans. For example, affordability, transfer and multimodal connectivity, as well as travel information did not come up as main aspects of accessibility objectives. 
-
-
 
 # equity analysis
 
@@ -340,10 +389,10 @@ More efforts are needed to effectively implement accessibility-based approaches.
 
 Table 3. Best Practices for a Greater Inclusion of Accessibility Planning and Metrics.
 
-|Recommendation	|Description|	Key examples|
+|Recommendation	|Description|	Key examples
+Accessibility goals and objectives	|Clearly defined goals and objectives are included in the plan.	The plan is structured around the goals and objectives.|London
 | --- | --- | --- |
-|Accessibility goals and objectives	|Clearly defined goals and objectives are included in the plan.	The plan is structured around the goals and objectives.|London
-|Distinction between accessibility and mobility	|Distinct accessibility and mobility objectives and indicators are defined.	|Baltimore
+Distinction between accessibility and mobility	|Distinct accessibility and mobility objectives and indicators are defined.	|Baltimore
 |Multi-criteria analysis including accessibility indicators	|Accessibility indicators are systematically included in the performance analyses.	Accessibility metrics are used to assess the general performance of the land use and transportation system, in addition to social equity.|London, Baltimore, Puget Sound (Seattle), Manchester, Melbourne
 |Access to destinations metrics	|The accessibility indicators are based on access to destinations (e.g.: jobs), rather than to transport amenities (e.g.: public transport stop)	|Boston
 |Multiple modes	|Accessibility is measured for various modes of transport	|North Central Texas, Atlanta
@@ -353,6 +402,31 @@ Overall, clear multi-criteria analysis, using clearly defined indicators, provid
 
 Notes {#notes}
 ==========
+
+
+[^9]: $A_j=\sum_jE_jf(C_ij)$
+where: $A_i$ represents accessibility to employment from zone $i$. $E_j$ is employment at destination $j$. $f(C_{ij})$ is a function of the travel cost (time and money) between $i$ and $j$. The higher the cost, the less the weight given to the employment location.
+[^10]: an overall accessibility measure is a summation of the measures of all origins:
+$A =\sum_jW_i A_i$
+where $A$ is overall accessibility for region, $W_i$ represents workers living at origin $i$
+[^11]: Isaac Newton (1687) first found the relationship between the gravitational force, distance, and mass. Ernest Ravenstein (1876-1889) developed a similar idea in the context of the social sciences. William J. Reilly developed a “Law of Retail Gravitation” (1931) John Q. Stewart developed the notion of demographic force (F) between places, and this demographic force equation forms the basis of the gravity model used in many transport planning models. Alan Voorhees (1956) first applied the gravity model to address problems of urban transport planning.
+$$T_{ij}=K_iK_j\frac{T_iT_j}{f(C_{ij})}$$
+$T_i=\sum_jT_{ij},\ T_j=\sum_iT_{ij},\ K_i=\frac1{\sum_jK_jT_jf(C_{ij})},\ K_j=\frac1{\sum_iK_iT_if(C_{ij})}$
+where:
+$T_{ij}$: trips between origin $i$ and destination $j$
+$T_i$: trips originating at $i$ (for example, workers)
+$T_j$: trips destined for $j$ (for example, jobs)
+$f$: distance decay factor, as in the accessibility model
+$C_{ij}$: generalized travel cost between $i$ and $j$
+$K_i, K_j$: balancing factors solved iteratively
+This gravity model suggests several things. 
+First, as city size increases, mean commuting time increases. The structure of gravity models implies diminishing marginal returns to job opportunities at the edge, since each additional job is less and less likely to be taken and thus less likely to increase travel time.
+Second, these models are largely independent of density—except to the extent that density changes network speed. A uniform increase in density increases the opportunities within each time band proportionately, and thus does not change the distribution of travel times. 
+Third, if preferences shift, mean travel time will change inward or outward. Fourth, if congestion rises, more opportunities will be farther away in terms of travel time, and fewer nearby—implying that average commuting time will rise.
+[^13]: Absolute accessibility is the total measure of accessibility within a particular area. A transport improvement increases overall accessibility—analogous to increasing the size of the pie.
+Relative accessibility is the share of total accessibility associated with a particular place. A new transport facility increases the relative accessibility of those points that can directly use the facility—analogous to increasing the percentage of the pie that a particular slice comprises.
+[^14]: Regional accessibility is determined by the regional structure of a metropolitan area and incorporated variables such as location, type of activities, and size of activities that affect shopping behavior. 
+Local accessibility, is primarily determined by nearby activity (where “nearby” is used to refer to the neighborhood unit, approximately one-half to one mile (800 to 1,600 m) in residential areas). Areas with higher local accessibility would be oriented to convenience goods, such as supermarkets and drug stores, and located in small centers.
 
 ---
 nocite: | 
